--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -134,11 +134,10 @@ div[class*=message] [class*=mentioned]:before {
   color: var(--interactive-active);
 }
 
-/* REMOVE REPLY AVATARS */
-[class*="repliedMessage"] [class*="avatar" i]{
+/* REMOVE REPLY USERNAME */
+[class*=repliedMessage][class*=username]{
   display: none;
 }
-
 
 
 /* AUTO COMPLETE EMOJI ANIMATION */
