--- a/Themes/Midnight/midnight.css
+++ b/Themes/Midnight/midnight.css
@@ -128,6 +128,9 @@
 .newChannel__1bbcf /* new channel */ {
 	background: var(--bg-1) !important;
 }
+[class*=newChannel]{
+    color: var(--accent-3);
+  }
 .chat__52833 /* chat + member list */,
 .sidebar_e031be /* channel sidebar */,
 .privateChannels__9b518 .scroller__89969 /* dms list inner */,
