--- a/Themes/Midnight/midnight.css
+++ b/Themes/Midnight/midnight.css
@@ -693,7 +693,7 @@ button.button__581d0 /* small buttons */,
 	height: 65%;
 	background: var(--text-4);
 	mask-image: var(--moon-icon-url) center/contain no-repeat;
-	mask-size: var(--moon-icon-size);
+	mask-size: var(--moon-icon-size) center/contain no-repeat;
 	mask-repeat: none;
 }
 .wrapper__8436d:hover .childWrapper_a6ce15::before {
