--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -251,6 +251,10 @@ main[class*=chatContent]{
   display: var(--showInboxButton);
 }
 /* Remove VC Icons */
-[class*=iconGroup]:has([class*=hangStatusIcon], svg>path:not([d*='m2.7 22.7 20-20a1'], [d*='M22.7 2.7a1 1']), [class*=iconGroup] [class*=gameIcon]),[class*=layerContainer] [class*=popout]:has([class*=text-xs-medium], [class*=options]) {
+[class*=iconGroup]:has([class*=hangStatusIcon], svg>path:not([d*='m2.7 22.7 20-20a1'], [d*='M22.7 2.7a1 1']), [class*=gameIcon]) {
+  display: none;
+}
+/* Remove VC Icon Options [self] */
+[class*=layerContainer] [class*=popout]:has([class*=text-xs-medium], [class*=options]){
   display: none;
 }
