--- a/CSS/LuLus_Common_Changes.css
+++ b/CSS/LuLus_Common_Changes.css
@@ -26,6 +26,11 @@
     display: none;
 }
 
+/*Hide Gift Button*/
+button:has([d*="M-7,10 C-8.104999542236328,10 -9"]) {
+  display: var(--showNitroButton);
+}
+
 /* Minimalistic Folders (aka Better Folders)*/
 [class*=closedFolderIcon]{
     display:none; 
