--- a/Themes/Midnight/midnight-trans.theme.css
+++ b/Themes/Midnight/midnight-trans.theme.css
@@ -12,7 +12,7 @@
 
 /* IMPORTANT: make sure to enable dark mode in discord settings for the theme to apply properly!!! */
 
-@import url('https://raw.githubusercontent.com/LuSaffi/VenCordstuff/main/Themes/Midnight/midnight.css');
+@import url('https://github.com/LuSaffi/VenCordstuff/blob/main/Themes/Midnight/transMidnight.css?raw=true');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji');
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans");
 /* customize things here */
