--- a/Themes/Midnight/midnight-biscuit.theme.css
+++ b/Themes/Midnight/midnight-biscuit.theme.css
@@ -26,7 +26,7 @@
 	--streaming-indicator: #7a3dbe; /* change to #593695 for default purple */
 
 	/* top left corner text */
-	--corner-text: 'Edencord';
+	--corner-text: '';
 
 	/* accent colors */
 	--accent-1: var(--channelColor); /* links */
