major edits to Demo Theme

--- a/Themes/Midnight/midnight-trans.theme.css
+++ b/Themes/Midnight/midnight-trans.theme.css
@@ -96,10 +96,10 @@
 }
 
 div, span, body, p, *{
-	font-family: var(--font) !important;
+	font-family: var(--font);
   }
   
   [class*="username"], [class*=header], [class*='typingdots' i]{
 	  font-family: var(--font);
-	  font-weight: bolder !important;
+	  font-weight: bolder;
   }
