--- a/Themes/demoTheme/Demonstration.theme.css
+++ b/Themes/demoTheme/Demonstration.theme.css
@@ -1,5 +1,5 @@
 /**
- * @name Demonstration
+ * @name Demonstration1
  * @author Saltssaumure
  * @authorLink https://github.com/Saltssaumure
  * @description A Discord theme for demonstrating Discord themes.
@@ -10,7 +10,7 @@
  * @donate https://ko-fi.com/saltssaumure
 */
 
-@import url("https://minidiscordthemes.github.io/Demonstration/demo.min.css");
+@import url("https://github.com/LuSaffi/VenCordstuff/blob/main/Themes/demoTheme/demo.min.css?raw=true");
 
 /* See https://github.com/MiniDiscordThemes/Demonstration#customisation for customisation settings. */
 :root {
