--- a/Themes/Midnight/midnight.css
+++ b/Themes/Midnight/midnight.css
@@ -180,7 +180,7 @@ path[fill='var(--white-500)'] {
 	fill: var(--text-0) !important;
 }
 .numberBadge__40d6f /* dms number badge */,
-.newMessagesBar__8b272 .barButtonBase__5e4cf /* unread bar */,
+[class^=newMessagesBar] [class^=barButtonBase] /* unread bar */,
 .botTagRegular_fc4b4a /* bot tag */,
 .endCap__95d53 /* unread divider */,
 .lookFilled__950dd.colorBrand__27d57 /* accent buttons */,
@@ -452,9 +452,9 @@ a[href="https://support.discord.com"] /* hide help */
 .members__573eb /* members list inner */,
 .searchResultsWrap__2e184 /* search results */,
 .profilePanel_e2cafe /* profile panel outer */,
-.userPanelOuter_eb00b1 /* profile panel inner */,
-.userPanelInner_f9edb8 /* profile panel inner inner */,
-.userPanelInner_f9edb8::before /* profile panel inner inner filter */ {
+.userPanelOuter_df01a5 /* profile panel inner */,
+.userPanelInner__3184c /* profile panel inner inner */,
+.userPanelInner__3184c::before /* profile panel inner inner filter */ {
 	border-radius: 0 0 var(--roundness-xl) var(--roundness-xl);
 }
 
@@ -462,7 +462,7 @@ a[href="https://support.discord.com"] /* hide help */
 .messagesPopoutWrap__10dd1 /* inbox, pinned messages popout */,
 .container_f93da8 /* thread popout */,
 .menu__088f7 .item__183e8d /* server option popout */,
-.userPopoutOuter__3884e /* user profile popout */,
+.userPopoutOuter_d67f56 /* user profile popout */,
 .root_ba16f0 /* user profile modal */,
 .contentWrapper_e0bb2c /* emoji, sticker, gif pickers */,
 .footer_e0b400 /* edit modal footer */,
@@ -474,11 +474,11 @@ a[href="https://support.discord.com"] /* hide help */
 .banner_b7f1fb /* user profile top when edit */ {
 	border-radius: calc(var(--roundness-l) - 4px) calc(var(--roundness-l) - 4px) 0 0;
 }
-.userPopoutInner_e90432:before /* user profile popout bottom */,
-.userProfileModalInner__99b1e:before /* user profile modal bottom */ {
+.userPopoutInner_ac0960:before /* user profile popout bottom */,
+.userProfileModalInner__84e47:before /* user profile modal bottom */ {
 	border-radius: calc(var(--roundness-l) - 4px);
 }
-.overlayBackground__2666e /* user profile inner */ {
+.overlayBackground__345c9 /* user profile inner */ {
 	border-radius: var(--roundness-s);
 }
 .menu__088f7 /* general popouts */,
